Small fixies : - +30% on font-size for description text on mobile - Overlap on titles with category tag

--- a/assets/stylesheets/_profiles.scss
+++ b/assets/stylesheets/_profiles.scss
@@ -117,8 +117,8 @@
 
 .profiles-selected-bio {
 	margin-bottom: 1em;
-	font-size: 1.5em;
-	line-height: 1.5em;
+	font-size: 1.95em;
+	line-height: 1.95em;
 	background-color: $color-white;
 }
 
@@ -291,6 +291,7 @@
 
 	.profiles-selected-bio {
 		font-size: 1em;
+		line-height: 1.5em;
 	}
 
 	.profiles-selected-contact {
