--- a/assets/stylesheets/_schedule.scss
+++ b/assets/stylesheets/_schedule.scss
@@ -315,6 +315,10 @@
 	    height: 4em;
 	}
 
+	.conference-header{
+		padding-right: 120px;
+	}
+
 	.conference-expanded {
 
 	}
